# SZGXSpeech_New

./: .gitignore  README.md
app/: text_processor.py
app/text_processor/: text_processor.py
backend/: pyproject.toml
backend/app/: main.py
docs/: text_processor.md
frontend/: vite.config.ts
frontend/src/: App.tsx
