[tool.poetry]
name = "app"
version = "0.1.0"
description = "SZGXSpeech Text Processing Tool"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
psycopg = {extras = ["binary"], version = "^3.2.4"}
openai = "^1.61.0"
tiktoken = "^0.8.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
chardet = "^5.2.0"
sse-starlette = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
